@@ -5,6 +5,7 @@
 	Added userlist menu items for admin control and display moderators
 	separately so they can be identified.
 	Fixed very broken registration dialog.
+	Automatic version checking from tclers.tk
 
 2007-03-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
